--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   ### Network Call
   dio: ^5.4.3+1
 
+  ###Service Locator
+  get_it: ^7.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
